main: Show Totem window when opening new files

If we're already opened. The previous thinking was that people
might use this to queue music. That's not so interesting anymore.

https://bugzilla.gnome.org/show_bug.cgi?id=711189